--- a/pykd/packages.pykd_vc120.config
+++ b/pykd/packages.pykd_vc120.config
@@ -8,4 +8,5 @@
   <package id="boost_thread" version="1.57.0.0" targetFramework="Native" />
   <package id="Python27" version="2.7.6" targetFramework="Native" />
   <package id="Python35" version="3.5.1.1" targetFramework="Native" />
+  <package id="Python36" version="3.6.0" targetFramework="Native" />
 </packages>
