[0.3.x] added : typedVar.setField method ( Set field of a structire or an element od array )
git-svn-id: https://pykd.svn.codeplex.com/svn@91217 9b283d60-5439-405e-af05-b73fd8c4d996

--- a/pykd/pykd_vc120.vcxproj.filters
+++ b/pykd/pykd_vc120.vcxproj.filters
@@ -78,6 +78,9 @@
     <ClInclude Include="pyprocess.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="pydataaccess.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
