--- a/pykd/pykd_vc120.vcxproj
+++ b/pykd/pykd_vc120.vcxproj
@@ -579,6 +579,7 @@
   <ItemGroup>
     <ClInclude Include="dbgexcept.h" />
     <ClInclude Include="pycpucontext.h" />
+    <ClInclude Include="pydataaccess.h" />
     <ClInclude Include="pydisasm.h" />
     <ClInclude Include="pydbgeng.h" />
     <ClInclude Include="pydbgio.h" />
